<resources>
    <string name="app_name">Simple Api Project</string>
    <string name="_05_30">05: 30</string>
    <string name="cloud_cover">Cloud cover</string>
    <string name="dhaka">Dhaka</string>
    <string name="o">o</string>
    <string name="_30">30</string>
    <string name="today">Today</string>
    <string name="surface_pressure">Surface pressure</string>
    <string name="humidity">Humidity</string>
    <string name="evaporation">Evaporation</string>
    <string name="precipitation">Precipitation</string>
    <string name="wind">Wind</string>
    <string name="soil_temperature">Soil temperature</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="c">C</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise_and_sunset">Sunrise and Sunset</string>
    <string name="max_and_min_temperature">Max and Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="rain_and_snowfall">Rain and Snowfall</string>
    <string name="rain">Rain</string>
    <string name="snowfall">Snowfall</string>
    <string name="precipitation_and_wind">Precipitation and Wind</string>
    <string name="time">01-10-20022</string>
</resources>