<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginBottom="20sp"
    app:cardCornerRadius="15sp"
    app:cardElevation="10dp"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="2sp">

            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:src="@drawable/thermometer_up"
                app:tint="#27378F"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/max_temperature"
                android:textColor="#091143"
                android:maxLines="2"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_daily_max_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_30"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/o"
                    android:textColor="#000000"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="2sp">

            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:src="@drawable/thermometer_down"
                app:tint="#27378F"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/min_temperature"
                android:textColor="#091143"
                android:maxLines="2"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_daily_min_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_30"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/o"
                    android:textColor="#000000"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>