<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForecastActivity"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200sp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    app:cardCornerRadius="30sp"
                    app:cardElevation="10sp">

                    <FrameLayout
                        android:background="@color/design_default_color_primary"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4sp"
                        android:orientation="horizontal"
                        android:background="@drawable/background_gradient">

                        <ImageView
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:src="@drawable/weathericon"/>

                        <LinearLayout
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0sp"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:gravity="center">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_gravity="center">

                                    <TextView
                                        android:id="@+id/txt_daily_temperature"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/_30"
                                        android:textColor="#000"
                                        android:textSize="30sp"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/o"
                                        android:textColor="#000"
                                        android:textSize="15sp"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/c"
                                        android:textColor="#000"
                                        android:textSize="30sp"/>

                                </LinearLayout>

                                <TextView
                                    android:id="@+id/txt_daily_city"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/dhaka"
                                    android:textColor="#000"
                                    android:textSize="18sp"/>

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0sp"
                                android:layout_weight="1"
                                android:orientation="horizontal"
                                android:gravity="center"
                                android:layout_marginBottom="5sp">

                                <LinearLayout
                                    android:layout_width="0sp"
                                    android:layout_weight="1"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:padding="2sp">

                                    <ImageView
                                        android:layout_width="40sp"
                                        android:layout_height="40sp"
                                        android:src="@drawable/humidity"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/humidity"
                                        android:textColor="#ffffff"
                                        android:maxLines="2"
                                        android:textSize="12sp"/>

                                    <TextView
                                        android:id="@+id/txt_daily_humidity"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/_05_30"
                                        android:textColor="#ffffff"
                                        android:maxLines="1"
                                        android:singleLine="true"/>


                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0sp"
                                    android:layout_weight="1"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:padding="2sp">

                                    <ImageView
                                        android:layout_width="40sp"
                                        android:layout_height="40sp"
                                        android:src="@drawable/speedometer"
                                        app:tint="#27378F"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/wind"
                                        android:textColor="#ffffff"
                                        android:maxLines="2"
                                        android:textSize="12sp"/>

                                    <TextView
                                        android:id="@+id/txt_daily_wind"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/_05_30"
                                        android:textColor="#ffffff"
                                        android:maxLines="1"
                                        android:singleLine="true"/>


                                </LinearLayout>

                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190sp"
                    android:orientation="vertical"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:text="@string/max_and_min_temperature"
                        android:textColor="#091143"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/daily_max_min_temperature_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:text="@string/sunrise_and_sunset"
                        android:textColor="#091143"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/daily_sunny_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:text="@string/rain_and_snowfall"
                        android:textColor="#091143"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/daily_rain_snowfall_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:layout_marginStart="20sp"
                        android:text="@string/precipitation_and_wind"
                        android:textColor="#091143"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/daily_prece_wind_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.recyclerview.widget.RecyclerView>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>