<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginBottom="20sp"
    android:layout_marginTop="10sp"
    app:cardCornerRadius="15sp"
    app:cardElevation="10dp"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_daily_sunny_time"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/time"
            android:textColor="#091143"
            android:gravity="center"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1sp"
            tools:ignore="SmallSp">

        </com.google.android.material.divider.MaterialDivider>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="2sp">

                <ImageView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:src="@drawable/sunrise"
                    app:tint="#27378F"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="#091143"
                    android:maxLines="2"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txt_daily_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_05_30"
                    android:textColor="#091143"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="2sp">

                <ImageView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:src="@drawable/sunset_60"
                    app:tint="#27378F"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="#091143"
                    android:maxLines="2"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txt_daily_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_05_30"
                    android:textColor="#091143"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>